--- a/composer.json
+++ b/composer.json
@@ -24,8 +24,7 @@
         "symfony/http-client": "^7.4 || ^8.0",
         "symfony/http-foundation": "^7.4 || ^8.0",
         "symfony/mime": "^7.4 || ^8.0",
-        "symfony/psr-http-message-bridge": "^7.4 || ^8.0",
-        "symfony/security-bundle": "^7.4 || ^8.0"
+        "symfony/psr-http-message-bridge": "^7.4 || ^8.0"
     },
     "require-dev": {
         "friendsofphp/php-cs-fixer": "^3.92",
